scraper-engine/kube/cattle/elasticsearch.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        cook-my-list/role: infra
        app.kubernetes.io/svc: elasticsearch
    spec:
      # # securityContext:
      # #   fsGroup: 1000
      # initContainers:
      # - name: init-sysctl
      #   image: busybox
      #   imagePullPolicy: IfNotPresent
      #   securityContext:
      #     privileged: true
      #   command: ["sysctl", "-w", "vm.max_map_count=262144"]
      initContainers: # https://faun.pub/digitalocean-kubernetes-and-volume-permissions-820f46598965
      - name: volume-permission-fix
        image: busybox
        command: ["/bin/chmod","-R","777", "/data"]
        volumeMounts:
        - name: data
          mountPath: /data
      - name: list-volume
        image: busybox
        command: ["/bin/ls","-Ral", "/data"]
        volumeMounts:
        - name: data
          mountPath: /data
      #   # securityContext:
      #   #   privileged: true
      #   #   runAsUser: 1000
      #   #   capabilities:
      #   #     add:
      #   #     - IPC_LOCK
      #   #     - SYS_RESOURCE
      containers:
      - name: elasticsearch
        # resources:
        #   requests:
        #     memory: 2Gi
        # securityContext:
        #   privileged: true
        #   runAsUser: 1000
        #   capabilities:
        #     add:
        #     - IPC_LOCK
        #     - SYS_RESOURCE
        image: elasticsearch:7.13.2
        ports:
        - containerPort: 9200
          name: elasticsearch
        - containerPort: 9300
          name: esbinary
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
        # - name: elasticsearch-config
        #   mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
        #   subPath: elasticsearch.yml
      volumes:
        - name: elasticsearch-config
          configMap:
            name: elasticsearch-config
            items:
              - key: elasticsearch.yml
                path: elasticsearch.yml
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      # storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    cook-my-list/role: infra
    app.kubernetes.io/svc: elasticsearch

spec:
  type: NodePort
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: elasticsearch

    - port: 9300
      targetPort: 9300
      protocol: TCP
      name: esbinary

  selector:
    app.kubernetes.io/svc: elasticsearch
