scraper-engine/kube/cattle/web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  # serviceAccountName: user
  minReadySeconds: 5
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: cook-my-list
      app.kubernetes.io/svc: web
  template:
    metadata:
      labels:
        app.kubernetes.io/svc: web
        cook-my-list/role: application
    spec:
      volumes:
        - name: yaml-config
          configMap:
            name: config
            items:
              - key: cook-my-list.yml
                path: cook-my-list.yml

      containers:
      - image: "gabrielfalcao/cook-my-list:latest"
        imagePullPolicy: IfNotPresent
        name: web-application-server
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 2Gi
        command: ['cook-my-list', 'web']
        # # For some reason with gunicorn the github+slack oauth callback are failing so let's use just flask for now
        # # command:
        # #   - 'gunicorn'
        # #   - '--capture-output'
        # #   - '--bind'
        # #   - ':4000'
        # #   - '--worker-class'
        # #   - 'gevent'
        # #   - '--workers'
        # #   - '8'
        # #   - "cook_my_list.web.routes:webapp"
        volumeMounts:
        - name: yaml-config
          mountPath: /butler/cook-my-list.yml
          subPath: cook-my-list.yml
        livenessProbe:
          httpGet:
            path: /health
            port: api
          initialDelaySeconds: 1800
          periodSeconds: 1800
        readinessProbe:
          httpGet:
            path: /health
            port: api
          initialDelaySeconds: 10

        ports:
        - containerPort: 4000
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    cook-my-list/role: application
    app.kubernetes.io/svc: web

spec:
  type: NodePort
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: api
  selector:
    app.kubernetes.io/svc: web
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cook-my-list
  labels:
    cook-my-list/role: application

spec:
  tls:
  - hosts:
      - drone.ci-butler.news.dev.nyt.net
    secretName: ci-butler-tls
  rules:
  - host: drone.ci-butler.news.dev.nyt.net
    http:
      paths:
      - backend:
          serviceName: cook-my-list-web
          servicePort: api
